# DataMiningForBigData_Parciales

./: Pipfile  README.md  pyproject.toml  requirements.txt
primerParcial/: TF-iDF.py  log_tf_idf.txt  parcial1_practico.ipynb
segundoParcial/: parcial2_practico_raw.ipynb
