[project]
name = "DataMiningForBigData_Parciales"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David López", email = "david.lopeza98@gmail.com"},
]
dependencies = [
    "pyspark",
    "pandas",
    "notebook",
    "oauth2client",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.4.2",
    "git+https://github.com/FelSiq/DBCV",
    "dbcv @ git+https://github.com/FelSiq/DBCV",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []
